--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,10 @@ button {
     color: white;
     position: absolute;
 }
+
+.oculto {
+    display: none;
+    margin-top: 20px;
+    font-size: 18px;
+    color: #d63384;
+}
