--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body, html {
     justify-content: center;
     align-items: center;
     text-align: center;
-    background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 100%); /* Fondo degradado */
+    background: linear-gradient(135deg, #ff9a9e 0%, #ff6a88 50%, #fad0c4 100%); /* Fondo degradado cálido */
     background-attachment: fixed; /* Fondo fijo */
 }
 
