--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,19 @@ button:active {
     to { opacity: 1; }
 }
 
+.hidden-area {
+    cursor: pointer;
+    display: inline-block;
+    margin-top: 20px;
+    font-size: 24px;
+    color: transparent;
+}
+
+.hidden-area:hover,
+.hidden-area:focus {
+    color: initial;
+}
+
 .modal {
     display: none;
     position: fixed;
@@ -139,11 +152,4 @@ button:active {
 #welcomeMessage:active {
     color: #fad0c4;
     transition: color 0.2s;
-}
-
-.hidden-area {
-    cursor: pointer;
-    display: inline-block;
-    margin-top: 20px;
-    font-size: 24px;
 }
