--- a/styles.css
+++ b/styles.css
@@ -168,7 +168,10 @@ button:active {
     transition: color 0.2s;
 }
 
-.hidden-code {
-    font-size: 1px;
+.hidden-heart {
+    cursor: pointer;
+    display: inline-block;
+    font-size: 24px;
     color: #ff6a88;
+    margin-top: 10px;
 }
