--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,20 @@ body {
     to { opacity: 1; }
 }
 
+.loader {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
 button {
     margin: 10px;
     padding: 10px 20px;
@@ -154,30 +168,7 @@ button:active {
     transition: color 0.2s;
 }
 
-.hidden-heart {
-    cursor: pointer;
-    display: inline-block;
-    font-size: 24px;
+.hidden-code {
+    font-size: 1px;
     color: #ff6a88;
-    margin-top: 10px;
-}
-
-/* Estilos para la sección de cargando */
-.loader {
-    border: 16px solid #f3f3f3;
-    border-radius: 50%;
-    border-top: 16px solid #3498db;
-    width: 120px;
-    height: 120px;
-    animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-}
-
-/* Estilos para la sección de error */
-#errorSection {
-    color: red;
 }
