--- a/styles.css
+++ b/styles.css
@@ -119,56 +119,4 @@ button:active {
     color: initial;
 }
 
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-    justify-content: center;
-    align-items: center;
-}
-
-.modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 600px;
-    text-align: center;
-}
-
-#welcomeMessage:hover {
-    color: #ff6a88;
-    transition: color 0.5s;
-}
-
-#welcomeMessage:active {
-    color: #fad0c4;
-    transition: color 0.2s;
-}
-
-.hidden-heart {
-    cursor: pointer;
-    display: inline-block;
-    font-size: 24px;
-    color: #ff6a88;
-    margin-top: 10px;
-}
-
-.ar-message {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 10px;
-    border-radius: 10px;
-    font-size: 20px;
-    display: none;
-}
+.modal
