--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body, html {
     height: 100%;
     margin: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Amatic SC', cursive;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -38,7 +38,7 @@ body {
 button {
     margin: 10px;
     padding: 10px 20px;
-    font-size: 16px;
+    font-size: 24px;
     cursor: pointer;
     background: linear-gradient(to right, #ff6a00, #ee0979);
     color: white;
@@ -57,5 +57,4 @@ button:active {
 }
 
 @keyframes vibrate {
-    0% { transform: translateX(0); }
-    25% { transform
+    0% { transform: translateX
