--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body, html {
     height: 100%;
     margin: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Pacifico', cursive;
     display: flex;
     justify-content: center;
     align-items: center;
