--- a/styles.css
+++ b/styles.css
@@ -100,20 +100,4 @@ button:active {
     border: 1px solid #888;
     width: 80%;
     max-width: 500px;
-    border-radius: 10px;
-    text-align: center;
-}
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
+    border-radius:
