--- a/styles.css
+++ b/styles.css
@@ -64,13 +64,6 @@ button:active {
     100% { transform: translateX(0); }
 }
 
-.counter {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    font-size: 18px;
-}
-
 .hidden-heart {
     margin: 20px;
     cursor: pointer;
@@ -85,4 +78,24 @@ button:active {
     display: none;
     font-size: 24px;
     color: #ff6a88;
-    margin-top:
+    margin-top: 20px;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+   
