--- a/styles.css
+++ b/styles.css
@@ -100,3 +100,9 @@ button:active {
     border: 1px solid #888;
     width: 80%;
     max-width: 500px;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font
