--- a/styles.css
+++ b/styles.css
@@ -105,4 +105,13 @@ button:active {
 .close {
     color: #aaa;
     float: right;
-    font
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
