--- a/styles.css
+++ b/styles.css
@@ -106,12 +106,4 @@ button:active {
     color: #aaa;
     float: right;
     font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
+    font-weight
