--- a/styles.css
+++ b/styles.css
@@ -106,4 +106,12 @@ button:active {
     color: #aaa;
     float: right;
     font-size: 28px;
-    font-weight
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
