--- a/styles.css
+++ b/styles.css
@@ -65,25 +65,4 @@ button:active {
     25% { transform: translateX(-2px); }
     50% { transform: translateX(2px); }
     75% { transform: translateX(-2px); }
-    100% { transform: translateX(0); }
-}
-
-.hidden-heart {
-    margin: 20px;
-    cursor: pointer;
-    font-size: 32px;
-}
-
-.hidden-heart:hover {
-    transform: scale(1.2);
-}
-
-.hidden-message {
-    display: none;
-    font-size: 24px;
-    color: black; /* Cambiar el color del mensaje a negro */
-    margin-top: 20px;
-}
-
-.gift {
-   
+    100% { transform: translateX(0);
